--- a/super2023/package.json
+++ b/super2023/package.json
@@ -3,5 +3,13 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "natlib": "^0.1.13"
+  },
+  "devDependencies": {
+    "clean-css-cli": "^5.6.2",
+    "html-minifier-terser": "^7.2.0",
+    "michikoid": "^0.0.6",
+    "rollup": "^3.28.1",
+    "terser": "^5.19.2",
+    "typescript": "^5.1.6"
   }
 }
