--- a/super2023/package.json
+++ b/super2023/package.json
@@ -8,6 +8,7 @@
     "clean-css-cli": "^5.6.2",
     "html-minifier-terser": "^7.2.0",
     "michikoid": "^0.0.6",
+    "roadroller": "^2.1.0",
     "rollup": "^3.28.1",
     "terser": "^5.19.2",
     "typescript": "^5.2.2"
