--- a/editor2023/package.json
+++ b/editor2023/package.json
@@ -1,5 +1,13 @@
 {
+  "author": "Mark Vasilkov (https://github.com/mvasilkov)",
+  "license": "GPL-3.0-only",
   "dependencies": {
     "natlib": "^0.1.13"
+  },
+  "devDependencies": {
+    "clean-css-cli": "^5.6.2",
+    "html-minifier-terser": "^7.2.0",
+    "rollup": "^3.28.1",
+    "terser": "^5.19.2"
   }
 }
