--- a/super2023/package.json
+++ b/super2023/package.json
@@ -6,10 +6,12 @@
   },
   "devDependencies": {
     "clean-css-cli": "^5.6.2",
+    "fast-xml-parser": "^4.2.7",
     "html-minifier-terser": "^7.2.0",
     "michikoid": "^0.1.0",
     "roadroller": "^2.1.0",
-    "rollup": "^3.29.0",
+    "rollup": "^3.29.1",
+    "svgpath": "^2.6.0",
     "terser": "^5.19.4",
     "typescript": "^5.2.2"
   }
